--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "bin": {
+    "liveload": "./start.js"
+  },
+  "author": "Mervyz Zhang",
   "license": "ISC",
   "dependencies": {
     "babel-core": "^6.21.0",
