--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "liveload-cli",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "description": "A tool which detect the file change and reload the resource at client side automatically.",
   "homepage": "https://github.com/zmyforever1/Liveload-cli",
   "main": "index.js",
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "llc": "./start.js"
+    "llc": "./app.js"
   },
   "keywords": [
     "reload",
@@ -22,10 +22,6 @@
   },
   "license": "ISC",
   "dependencies": {
-    "babel-core": "^6.21.0",
-    "babel-polyfill": "^6.20.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-stage-3": "^6.17.0",
     "koa": "^2.0.0-alpha.7",
     "koa-convert": "^1.2.0",
     "koa-static": "^2.0.0",
